Closes-Bug: #1540823 Fixed the issue that Log messages are not truncated in certain cases and being overflowed on to next container "System Information"
It happens when there are no word break characters in the message.
Modified the css to break into next line even if no word break
characters is there.

--- a/webroot/css/contrail.custom.css
+++ b/webroot/css/contrail.custom.css
@@ -742,6 +742,9 @@ a.selectAllLink:hover {
 .break-and-wrap-word{
 	word-wrap: break-word;
 }
+.word-break-all {
+	word-break: break-all;
+}
 
 /* Slickgrid Header Styles */
 
